Prevent horizontal scrolling on small screens

--- a/wiki/src/about/staging/common.css
+++ b/wiki/src/about/staging/common.css
@@ -47,9 +47,11 @@ form#searchform {
   position: relative;
   background: none !important;
   overflow: auto;
-  top: 0 !important;
-  left: 30px;
+  top: auto !important;
+  right: auto;
   margin-top: 10px;
+  margin-left: 30px;
+  width: auto;
 }
 
 @media (min-width: 520px) {
